css/accordion.css
/**
 * Accordion
 */

.accordion {
  margin-left: auto;
  max-width: 160px;
  padding: 16px;
  transition: max-width 0.25s;
}

.accordion.is-active {
  max-width: 248px;
}

/**
 * Item
 */

.accordion-item {
  padding-bottom: 16px;
}

/**
 * Header
 */

.accordion-item__header {
  display: flex;
  justify-content: flex-end;
}

/**
 * Button
 */

.accordion-item__button {
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 8px;
  cursor: pointer;
  display: flex;
  flex: 1;
  justify-content: flex-end;
  padding: 8px 16px;
  transition: background-color 0.25s;
  vertical-align: middle;
  white-space: nowrap;
}

.accordion-item__button:focus,
.accordion-item__button:hover {
  background-color: var(--tepidXXL);
  outline: none;
}

.accordion.is-active .accordion-item:not(.is-active) .accordion-item__button:focus .accordion-item__label,
.accordion.is-active .accordion-item:not(.is-active) .accordion-item__button:hover .accordion-item__label {
  color: var(--gratefulLight);
}

.accordion-item.is-active .accordion-item__button,
.accordion-item.is-active .accordion-item__button {
  background-color: var(--tepidXXXL);
  outline: none;
}

/**
 * Label
 */

.accordion-item__label {
  color: var(--gratefulLight);
  padding-right: 8px;
  pointer-events: none;
  transition: color 0.25s;
}

.accordion.is-active .accordion-item:not(.is-active) .accordion-item__label {
  color: var(--tepidXXL);
}

/**
 * Icon
 */

.accordion-item__icon {
  display: flex;
  height: 20px;
  pointer-events: none;
  width: 20px;
}

.accordion-item__icon svg {
  height: 20px;
  transition: fill 0.25s;
  width: 20px;
}

.accordion-item__icon svg {
  fill: var(--tepidLight);
}

.accordion.is-active .accordion-item:not(.is-active) .accordion-item__icon svg {
  fill: var(--tepidXXL);
}

.accordion.is-active .accordion-item:not(.is-active) .accordion-item__button:focus .accordion-item__icon svg,
.accordion.is-active .accordion-item:not(.is-active) .accordion-item__button:hover .accordion-item__icon svg {
  fill: var(--tepidLight);
}

/**
 * Content
 */

.accordion-item__body {
  height: 0;
  overflow: hidden;
  transition: height 0.25s ease-out;
}

/**
 * Content
 */

.accordion-item__content {
  opacity: 0;
  padding-top: 16px;
}

.accordion-item.is-active .accordion-item__content {
  animation: fadeIn 0.25s ease-out 0.25s forwards;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

